@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5781 2004/04/30 21:17:12 jmmv Exp $
+$NetBSD: CHANGES,v 1.5782 2004/04/30 23:33:37 snj Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2303,3 +2303,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated sablevm to 1.1.3 [jmmv 2004-04-30]
 	Updated sablevm-classpath to 1.1.3 [jmmv 2004-04-30]
 	Updated sablevm-classpath-gui to 1.1.3 [jmmv 2004-04-30]
+	Updated gqview to 1.4.3 [snj 2004-04-30]
